2000-04-30  Michael Han  <mikehan@best.com>

    * fvwm/bindings.c (ParseBinding):
    * fvwm/session.c
    -Wall fixes to hide variables if they're not going to be used

2000-04-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (get_selectable_item_count):
	(menuShortcuts):
	cleand up menu shorcut code and fixed several minor bugs

	* fvwm/menus.c (MenuInteraction):
	fixed bug: pressing 'right' when a menu is posted but nothing in it
	selected sometimes closed all open menus instead of entering the submenu

	* fvwm/menus.c (do_menu):
	(pop_menu_up):
	(MenuInteraction):
	(pop_menu_up):
	(do_menu):
	* fvwm/menus.h:
	some minor position hint fixes
	fixed previous position hint patch

	* fvwm/menus.c (GetMenuOptions):
	fixed typos
	(MenuInteraction):
	menus invoked with 'Menu' honour position hints even if they are invoked
	from a menu without specifying 'SelectInPlace'

2000-04-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (DeIconify):
	fixed shade-iconify-drag_to_other_page-deiconify-unshade
	fixed maximize-iconify-drag_to_other_page-deiconify-unmaximize

	* fvwm/geometry.c (update_relative_geometry):
	new function

	* fvwm/virtual.c (gotoDeskAndPage_func):
	(goto_desk):
	completed FvwmPager workaround for sticky windows with brute force.
	Each desk change is followed by a complete set of restack messages.

	* fvwm/virtual.c:
	renamed MapIt() to map_window()
	renamed UnmapIt() to unmap_window()

	* fvwm/virtual.h (gotoDeskAndPage_func):
	* fvwm/virtual.c (goto_desk_func):
	(goto_desk):
	* fvwm/session.c (LoadGlobalState):
	* fvwm/placement.c (PlaceWindow):
	* fvwm/functions.h (enum):
	* fvwm/gnome.c (GNOME_ProcessClientMessage):
	* fvwm/focus.c (WarpOn):
	(FocusOn):
	* fvwm/functions.c (func_config):
	renamed chageDesks() to goto_desk()
	renamed chageDesks_func() to goto_desk_func()

	* fvwm/fvwm2.1:
	fixed typo

2000-04-26  Mikhael Goikhman  migo@homemail.com

	* NEWS, configure.in, fvwm/Makefile.am, fvwm/externs.h, fvwm/fvwm.c,